--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "description": "Project generator",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "bin": {
+    "generate-express": "./index"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,11 @@
   "bugs": {
     "url": "https://github.com/afikrim/project-generator/issues"
   },
-  "homepage": "https://github.com/afikrim/project-generator#readme"
+  "homepage": "https://github.com/afikrim/project-generator#readme",
+  "dependencies": {
+    "inquirer": "^7.3.3"
+  },
+  "engines": {
+    "node": ">=10.22.0"
+  }
 }
